Hopefully better logs in github actions

--- a/.github/workflows/framework_tests.yml
+++ b/.github/workflows/framework_tests.yml
@@ -32,3 +32,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest -v -m unit
+    - name: Test Report
+      uses: phoenix-actions/test-reporting@v8
+      id: test-report
+      if: success() || failure()
+      with:
+        name: Pytest Tests
+        path: report.xml
+        reporter: java-junit
