--- a/.github/workflows/chrome_framework_tests.yml
+++ b/.github/workflows/chrome_framework_tests.yml
@@ -37,7 +37,7 @@ jobs:
         pytest -v -k chrome -m unit --junitxml=report.xml
     - name: Test Report
       uses: phoenix-actions/test-reporting@v8
-      id: test-report
+      id: test-report-chrome
       if: success() || failure()
       with:
         name: Google Chrome Pytest Tests
