--- a/.github/workflows/chrome_framework_tests.yml
+++ b/.github/workflows/chrome_framework_tests.yml
@@ -1,10 +1,13 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: 'Chrome'
+name: Chrome Tests
 
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 permissions:
   id-token: write
@@ -31,10 +34,12 @@ jobs:
         echo "headless=true" >> $GITHUB_ENV
     - name: Test with pytest
       run: |
-        pytest -v -k chrome -m unit --junitxml=chrome-report.xml
+        pytest -v -k chrome -m unit --junitxml=report.xml
     - name: Test Report
-      uses: actions/upload-artifact@v2
+      uses: phoenix-actions/test-reporting@v8
+      id: test-report-chrome
       if: success() || failure()
       with:
-        name: test-results
-        path: chrome-report.xml
+        name: Google Chrome Pytest Tests
+        path: report.xml
+        reporter: java-junit
